# mathomatic

./: .README.txt.un~  AUTHORS  CMakeLists.txt  INSTALL.txt  NEWS  README.txt  altproto.h  am.c  am.h  blt.h  changes.txt  changes_series_15.txt  cmds.c  compile.mingw  compile.secure  complex.c  complex.h  complex_lib.c  diff.c  externs.h  factor.c  factor_int.c  gcd.c  globals.c  help.c  includes.h  integrate.c  license.h  list.c  main.c  makefile  makehtmlcard.awk  makehtmlcard.sh  makenews.sh  makepdfsheet.sh  mathomatic.1  mk-mathomatic-amalgamation.lua  mk-mathomatic.sh  parse.c  poly.c  (+10 more)
doc/: README.txt  am.html  doc.css  fdl-1.3-standalone.html  index.html  manual.html  matho-mult.1.html  matho-pascal.1.html  matho-primes.1.html  matho-sum.1.html  matho-sumsq.1.html  mathomatic.1.html  primorial.1.html  quickrefcard.html  rmath.1.html
examples/: README.txt  compile.limits  compile.roots  fact.c  fact.py  factorial  intfact.c  limits.c  roots.c  testprimes
icons/: README.txt  icon.rc  mathomatic.desktop  mathomatic.icns  mathomatic.xpm
lib/: README.txt  compile.testmain  example.c  lib.c  makefile  matho_clear.3  matho_init.3  matho_parse.3  matho_process.3  mathomatic.h  testmain.c
m4/: README.txt  degrees.m4  file_id.diz  functions.m4  gradians.m4  matho  matho-install  matho-install-degrees  matho-uninstall  rmath
menu/: README.txt  mathomatic  mathomatic-primes
misc/: README.txt  ideas.txt  identities.in  john.in  known_bugs.txt  linear4.in
primes/: README.txt  bigtwins.out  lsqrt.c  makefile  matho-mult  matho-mult.1  matho-pascal.1  matho-pascal.c  matho-primes.1  matho-primes.c  matho-sum  matho-sum.1  matho-sumsq.1  matho-sumsq.c  primorial  primorial.1  t  twins.out
tests/: README.txt  all.in  all.out  batman_gnuplot_bug.in  batman_plot  circles.in  collatz.in  cubic.in  cubic2.in  demo  demo.in  demo_sub  distance.in  electronics.in  ellipse.in  examples.in  fibonacci.in  finance.in  fix1.in  fix2.in  fix5.in  fix7.in  fix8.in  fix9.in  fraction.in  heart.in  heron.in  how_limit_works.in  t  (+18 more)
